Bug 168010 - PPTX import: textbox with auto-shrink text with empty trailing lines is misaligned vertically
Summary: PPTX import: textbox with auto-shrink text with empty trailing lines is misal...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-19 11:26 UTC by Mike Kaganski
Modified: 2025-08-20 22:07 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A text box with some trailing empty lines (7.78 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-08-19 11:26 UTC, Mike Kaganski
Details
How PowerPoint shows it (40.45 KB, image/png)
2025-08-19 11:30 UTC, Mike Kaganski
Details
How Impress shows it (43.95 KB, image/png)
2025-08-19 11:30 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-08-19 11:26:03 UTC
Created attachment 202376 [details]
A text box with some trailing empty lines

The attached PPTX has a text, which is set to auto-shrink text on overflow; after "textbox" paragraph, there are two more empty paragraphs. There is also a line shape, positioned to strike out the last empty paragraph. This means, that the "textbox" paragraph is positioned significantly above the horizontal line shape.

Opening it in Impress ignores the empty paragraphs; the result is, that the line shape strikes out "textbox" string.
Comment 1 Mike Kaganski 2025-08-19 11:30:14 UTC
Created attachment 202377 [details]
How PowerPoint shows it
Comment 2 Mike Kaganski 2025-08-19 11:30:26 UTC
Created attachment 202378 [details]
How Impress shows it
Comment 3 Mike Kaganski 2025-08-19 21:08:03 UTC
Sigh, confused the bug numbers in the commit message.

Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/425b55efaf1f04e8f91cb049a5820fcf61e678dd

tdf#164622: introduce UseTrailingEmptyLinesInLayout compat option

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-08-20 22:07:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/40f13a8fc7676f7ed0741b3b4c46d0c06637ce53

tdf#168010: introduce UseTrailingEmptyLinesInLayout compat option

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.